# embedded-sprites

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
embedded-sprites/: Cargo.toml  README.md
embedded-sprites/src/: image.rs  lib.rs  sprite.rs
example/simple/: Cargo.toml
example/simple-png/: Cargo.toml  build.rs
example/simple-png/src/: main.rs
example/simple/src/: main.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
