[package]
workspace = ".."
name = "embedded-sprites"
version = "0.1.2"
keywords = ["graphics", "embedded-graphics", "embedded", "no_std", "no-std"]
description = "Embedded no std graphics libary for bundling image at compile time"
include = ["/src/**/*.rs", "/build.rs", "/LICENSE*", "/README.md", "grass.png"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.0"
embedded-sprites-proc-macro  = {version = "0.1.1", path = "../proc-macro"}

[dev-dependencies]
konst = "0.3.4"
embedded-graphics-simulator = "0.6.0"
