[package]
workspace = ".."
name = "embedded-sprites"
version = "0.2.0"
keywords = ["graphics", "embedded-graphics", "embedded", "no_std", "no-std"]
description = "Embedded no std graphics libary for bundling image at compile time"
include = ["/src/**/*.rs", "/build.rs", "/LICENSE*", "/README.md", "grass.png"]
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
embedded-graphics = { workspace = true }
embedded-sprites-proc-macro  = { workspace = true }

[dev-dependencies]
konst = "0.3.4"
embedded-graphics-simulator = { workspace = true }
