[package]
workspace = ".."
name = "embedded-sprites-proc-macro"
version = "0.1.0"
description = "Private implementation detail of embedded-sprites"
include = ["/src/**/*.rs", "/build.rs", "/LICENSE*", "/README.md"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
embedded-graphics = "0.7.1"
image = "0.24.5"
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
