[package]
workspace = ".."
name = "embedded-sprites-proc-macro"
version = "0.1.1"
description = "Private implementation detail of embedded-sprites"
include = ["/src/**/*.rs", "/build.rs", "/LICENSE*", "/README.md"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
embedded-graphics = { workspace = true }
image = "0.25.1"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version ="1.0", features = ["parsing", "printing", "full"] }
