[package]
workspace = "../.."
name = "simple-png"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.4.0"
embedded-sprites = {version = "0.1.0", path = "../../embedded-sprites"}
