[package]
workspace = "../.."
name = "simple-png"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { workspace = true }
embedded-graphics-simulator = { workspace = true }
embedded-sprites = { workspace = true }
