[package]
workspace = "../.."
name = "simple"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.4.0"
embedded-sprites = {version = "0.1.0", path = "../../embedded-sprites"}
konst = "0.3.4"
