[package]
workspace = "../.."
name = "simple"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { workspace = true }
embedded-graphics-simulator = { workspace = true }
embedded-sprites = { workspace = true }
konst = "0.3.4"
